err/sparrow.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/httplib2'...
Listing './lib/python3.5/site-packages/httplib2-0.10.3.egg-info'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './lib/python3.5/site-packages/sparrow'...
Compiling './lib/python3.5/site-packages/sparrow/allegro_backend.py'...
***   File "./lib/python3.5/site-packages/sparrow/allegro_backend.py", line 46
    except RDF.RedlandError, err:
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sparrow/base_backend.py'...
***   File "./lib/python3.5/site-packages/sparrow/base_backend.py", line 35
    except ValueError, err:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sparrow/ntriples.py'...
***   File "./lib/python3.5/site-packages/sparrow/ntriples.py", line 232
    print 'Length of input:', sink.length
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sparrow/rdflib_backend.py'...
***   File "./lib/python3.5/site-packages/sparrow/rdflib_backend.py", line 60
    except rdflib.exceptions.ParserError, err:
                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sparrow/redland_backend.py'...
***   File "./lib/python3.5/site-packages/sparrow/redland_backend.py", line 68
    except RDF.RedlandError, err:
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sparrow/tests'...
Compiling './lib/python3.5/site-packages/sparrow/tests/test_allegro.py'...
***   File "./lib/python3.5/site-packages/sparrow/tests/test_allegro.py", line 61
    except ConnectionError, err:
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sparrow-1.0b4.egg-info'...
Listing './lib/python3.5/site-packages/zope'...
Listing './lib/python3.5/site-packages/zope/interface'...
Listing './lib/python3.5/site-packages/zope/interface/common'...
Listing './lib/python3.5/site-packages/zope/interface/common/tests'...
Listing './lib/python3.5/site-packages/zope/interface/tests'...
Listing './lib/python3.5/site-packages/zope.interface-4.4.3.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
